--- a/EZMusic/Properties/Resources.resx
+++ b/EZMusic/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="netease" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\netease.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="tot qq" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tot qq.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="tot ne" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tot ne.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -136,9 +139,20 @@
   <data name="qq" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\qq.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="tot qq" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\tot qq.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="32x2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\32x2.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="32x3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\32x3.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="32x4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\32x4.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="32xred" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\32xred.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="未命名" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\未命名.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
